chore(server): bump java version to 21