@@ -19,6 +19,8 @@ plugins {
 
 application {
     mainClass.set("net.darkmeow.irc.IRCServerLoader")
+
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 dependencies {
@@ -59,12 +61,12 @@ dependencies {
 tasks {
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
+            languageVersion = JavaLanguageVersion.of(21)
         }
     }
 
     kotlin {
-        jvmToolchain(17)
+        jvmToolchain(21)
     }
 
     startScripts {
